# ft_ls

./: BUILD.bazel  FUNCTIONS  Makefile  includes
srcs/: argv_handler.c  blkcount.c  colors.c  columns.c  free_struct.c  ft_ls.h  ft_read_dir.c  lister.c  main.c  name_render.c  opt.c  part_render.c  print_table.c  render.c  sorting.c  strmode.c  uid_render.c
tests/: Makefile  genfolder.sh  run_test.sh
